--- a/aftershockStatistics/aafs/ActionConfig.json
+++ b/aftershockStatistics/aafs/ActionConfig.json
@@ -6,6 +6,9 @@
   "comcat_origin_skew": "PT2M0S",
   "comcat_retry_min_gap": "PT30S",
   "seq_spec_min_lag": "PT3H",
+  "advisory_dur_week": "PT1S",
+  "advisory_dur_month": "P25D",
+  "advisory_dur_year": "P90D",
   "forecast_lags": [
     "P0DT0H20M0S",
     "P0DT4H0M0S",
@@ -43,7 +46,7 @@
       "name": "northern_cal",
       "min_mag": 2.0,
       "intake_mag": 2.0,
-      "region":{
+      "region": {
         "ClassType": 14001,
         "SphRegionMercPolygon": 1,
         "vertex_list":[
@@ -58,7 +61,7 @@
       "name": "usa",
       "min_mag": 2.0,
       "intake_mag": 2.0,
-      "region":{
+      "region": {
         "ClassType": 14001,
         "SphRegionMercPolygon": 1,
         "vertex_list":[
