--- a/aftershockStatistics/aafs/ActionConfig.json
+++ b/aftershockStatistics/aafs/ActionConfig.json
@@ -9,6 +9,19 @@
   "advisory_dur_week": "PT1S",
   "advisory_dur_month": "P25D",
   "advisory_dur_year": "P90D",
+  "def_max_forecast_lag": "P365DT0H0M0S",
+  "withdraw_forecast_lag": "P3DT0H0M0S",
+  "stale_forecast_option": 3,
+  "shadow_search_radius": 2000.0,
+  "shadow_lookback_time": "P365D",
+  "shadow_centroid_mag": 3.0,
+  "shadow_large_mag": 7.6,
+  "poll_short_period": "P0DT0H20M0S",
+  "poll_short_lookback": "P3DT0H0M0S",
+  "poll_short_intake_gap": "P0DT0H0M30S",
+  "poll_long_period": "P1DT0H0M0S",
+  "poll_long_lookback": "P330DT0H0M0S",
+  "poll_long_intake_gap": "P0DT0H5M0S",
   "forecast_lags": [
     "P0DT0H20M0S",
     "P0DT6H0M0S",
@@ -34,7 +47,67 @@
     "P273DT0H0M0S",
     "P304DT0H0M0S",
     "P334DT0H0M0S",
-    "P365DT0H0M0S"
+    "P365DT0H0M0S",
+    "P396D",
+    "P426D",
+    "P457D",
+    "P487D",
+    "P518D",
+    "P548D",
+    "P578D",
+    "P608D",
+    "P639D",
+    "P669D",
+    "P700D",
+    "P730D",
+    "P791D",
+    "P852D",
+    "P913D",
+    "P973D",
+    "P1034D",
+    "P1095D",
+    "P1156D",
+    "P1217D",
+    "P1278D",
+    "P1338D",
+    "P1399D",
+    "P1460D",
+    "P1521D",
+    "P1582D",
+    "P1643D",
+    "P1703D",
+    "P1764D",
+    "P1825D",
+    "P1886D",
+    "P1947D",
+    "P2008D",
+    "P2068D",
+    "P2129D",
+    "P2190D",
+    "P2251D",
+    "P2312D",
+    "P2373D",
+    "P2433D",
+    "P2494D",
+    "P2555D",
+    "P2616D",
+    "P2677D",
+    "P2738D",
+    "P2798D",
+    "P2859D",
+    "P2920D",
+    "P2981D",
+    "P3042D",
+    "P3103D",
+    "P3163D",
+    "P3224D",
+    "P3285D",
+    "P3346D",
+    "P3407D",
+    "P3468D",
+    "P3528D",
+    "P3589D",
+    "P3650D"
   ],
   "comcat_retry_lags": [
     "P0DT0H0M30S",
@@ -56,7 +129,17 @@
     "P2DT0H0M0S",
     "P3DT0H0M0S",
     "P4DT0H0M0S",
-    "P5DT0H0M0S"
+    "P5DT0H0M0S",
+    "P6DT0H0M0S",
+    "P7DT0H0M0S",
+    "P8DT0H0M0S",
+    "P9DT0H0M0S",
+    "P10DT0H0M0S",
+    "P11DT0H0M0S",
+    "P12DT0H0M0S",
+    "P13DT0H0M0S",
+    "P14DT0H0M0S",
+    "P15DT0H0M0S"
   ],
   "comcat_intake_lags": [
     "P0DT0H2M0S",
@@ -142,10 +225,10 @@
         "ClassType": 14001,
         "SphRegionMercPolygon": 1,
         "vertex_list":[
-          {"lat":49.4000, "lon":-124.8000},
-          {"lat":24.5000, "lon":-124.8000},
-          {"lat":24.5000, "lon":-66.9000},
-          {"lat":49.4000, "lon":-66.9000}
+          {"lat":50.0000, "lon":-125.0000},
+          {"lat":24.6000, "lon":-125.0000},
+          {"lat":24.6000, "lon":-65.0000},
+          {"lat":50.0000, "lon":-65.0000}
         ]
       }
     },
