--- a/aftershockStatistics/aafs/ServerConfig.json
+++ b/aftershockStatistics/aafs/ServerConfig.json
@@ -9,6 +9,10 @@
   "activemq_port": 61616,
   "activemq_user": "admin",
   "activemq_password": "admin",
+  "log_con_aafs": "'/opt/aafs/logs/'yyyy-MM-dd'-aafs.log'",
+  "log_con_intake": "'/opt/aafs/logs/'yyyy-MM-dd'-intake.log'",
+  "log_con_control": "'/opt/aafs/logs/'yyyy-MM-dd'-control.log'",
+  "log_summary": "'/opt/aafs/logs/'yyyy-MM-dd'-summary.log'",
   "comcat_url": "https://earthquake.usgs.gov/fdsnws/event/1/",
   "pdl_enable": 0,
   "pdl_key_filename": "",
